# ChangeLog for app-portage/portage-bashrc-mv
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header $

*portage-bashrc-mv-10.3 (28 Feb 2012)

  28 Feb 2011; Martin Väth <martin@mvath.de>
  Version bump, remove old ebuild.

*portage-bashrc-mv-10.2 (19 Feb 2012)

  19 Jan 2012; Martin Väth <martin@mvath.de>
  Version bump, remove old ebuild. Support CPPFLAGS.

*portage-bashrc-mv-10.1 (06 Jan 2012)

  06 Jan 2012; Martin Väth <martin@mvath.de>
  Version bump, remove old ebuild.

*portage-bashrc-mv-10.0 (19 Dec 2011)

  19 Nov 2011; Martin Väth <martin@mvath.de>
  New ebuild from scratch.