@@ -1,1 +1,2 @@
 DIST portage-bashrc-mv-10.3.tar.gz 9350 RMD160 f564b49671832b137d70efa343d1c3b49c2c43d5 SHA1 d4f0e9a29cbf7e223d364216886657c0248918dd SHA256 ed9a90c74f461ecf920527b6822b74fc29da3d2ca68c54a887b4f21498a77847
+DIST portage-bashrc-mv-10.6.tar.gz 9338 RMD160 613712938cc14c832a6e1635f3b575a39a3b88a0 SHA1 c1fe4f2f65d7952f92c40723b431b00630cff739 SHA256 8b3b950622719b6c70c2f0737da7dd18ec5d14148da8e435a2ad87aae2f34b81
